week13- menambahkan laporan dan screenshot